# photo_uploader

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: environment_config.rs  file_discovery.rs  immich.rs  main.rs
src/immich/: album.rs  mod.rs
src/watermark/: exif.rs  mod.rs
