[package]
name = "photo_uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["env", "derive"] }
dirs = "6.0.0"
exif = "0.0.1"
image = "0.25.6"
imageproc = "0.25.0"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
rusttype = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
