[package]
name = "photo_uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["env", "derive"] }
dirs = "6.0.0"
exif = "0.0.1"
little_exif = "0.6.8"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
